Sutter Health/src/objects/Result_Log__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Name__c</fullName>
        <label>Batch Job Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Id__c</fullName>
        <label>Permission Set Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Result Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Job_Name__c</columns>
        <columns>Message__c</columns>
        <columns>Record_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Username__c</columns>
        <columns>Permission_Set_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Result Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>